src/test/deca/syntax/valid/provided/null.deca
// Description:
//    Test de null
//
// Resultats:
//    null
//
// Historique:
//    cree le 01/01/2021

{
    print(null);
}
