src/test/deca/syntax/invalid/accollade_incorr.deca
// Description:
//    tests de programme lexicalement correct.
//Resultats:
//    Ligne 15 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 07/01/2021




{
println("");
